# ucuetis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  project.4coder
examples/: test.uc
src/: alltypes.h  analyzer.c  analyzer.h  arena.c  arena.h  error.c  error.h  file.c  file.h  main.c  main.cpp  parser.c  parser.h  scanner.c  scanner.h
src/analyzer/: analyzer.hpp
src/error/: error.cpp  error.hpp
src/file/: file.cpp  file.hpp
src/mem/: arena.cpp  arena.hpp  pool.hpp
src/parser/: parser.cpp  parser.hpp
src/scanner/: scanner.cpp  scanner.hpp
