cmake_minimum_required(VERSION 3.1)
project(ucuetis)

set(CMAKE_C_STANDARD 11)

option(BUILD_RELEASE "build with optimizations on" off)

if(BUILD_RELEASE)
  if(MSVC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /O2 /DEBUG:NONE")
  else(MSVC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
  endif(MSVC)
else(BUILD_RELEASE)
  if(MSVC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W3 /DEBUG:FASTLINK")
  else(MSVC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic -Wall -g")
  endif(MSVC)
endif(BUILD_RELEASE)

add_library(file src/file.c)
add_library(arena src/arena.c)
add_library(error src/error.c)
add_library(scanner src/scanner.c)
add_library(parser src/parser.c)
#add_library(analyzer src/analyzer.c)

add_executable(ucuetis src/main.c)

target_link_libraries(error arena)
target_link_libraries(scanner arena error)
target_link_libraries(parser scanner error arena error)
#target_link_libraries(analyzer parser error arena)
target_link_libraries(ucuetis file arena error scanner parser)# analyzer)
